enhancements and addition of Makefile

--- a/blog/themes/zola-clean-blog/templates/index.html
+++ b/blog/themes/zola-clean-blog/templates/index.html
@@ -55,7 +55,7 @@
 
   <!-- Page Header -->
   {% block header %}
-  <header class="masthead" style="background-image: url('{{ get_url(path="/img/home-bg.jpg")}}')">
+  <header class="masthead" style="background-image: url('{{ get_url(path="/img/GFA-logo.png")}}')">
     <div class="overlay">
     </div>
     <div class="container">
@@ -119,8 +119,7 @@
             </li>
             {% endfor %}
           </ul>
-          <p class="copyright text-muted">{% block copyright %}Copyright &copy; Your Website
-            2019{% endblock copyright %}</p>
+          <p class="copyright text-muted">{% block copyright %}Copyright &copy; GFA 2022 {% endblock copyright %}</p>
         </div>
       </div>
     </div>
