--- a/blog/themes/zola-clean-blog/sass/_masthead.scss
+++ b/blog/themes/zola-clean-blog/sass/_masthead.scss
@@ -14,7 +14,7 @@ header.masthead {
     height: 100%;
     width: 100%;
     background-color: $gray-900;
-    opacity: 0.5;
+    opacity: 0;
   }
   .page-heading,
   .post-heading,
@@ -22,7 +22,16 @@ header.masthead {
     padding: 200px 0 150px;
     color: white;
     @media only screen and (min-width: 768px) {
-      padding: 200px 0;
+      padding: 180px;
+    }
+  }
+  .page-heading,
+  .post-heading,
+  .site-heading {
+    padding: 200px 0 150px;
+    color: white;
+    @media only screen and (max-width: 768px) {
+      padding: 0px;
     }
   }
   .page-heading,
